tests/miniJava/neg/003052_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = while false ; } }
